// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Appointment Preview Available Appointment 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer availableAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="availableAppointmentText"
        >
          תור ריק
        </div>
      </div>
      <svg>
        add-person.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Preview Booked Appointment 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer bookedAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="donorName"
        >
          משה כהן
        </div>
      </div>
      <svg>
        chevron-left.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Preview Recently Booked 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer bookedAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="donorName"
        >
          משה כהן
        </div>
        <div
          className="recentChangeChipContainer"
        >
          <div
            className="recentChangeChip greenChip"
          >
            חדש
          </div>
        </div>
      </div>
      <svg>
        chevron-left.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Preview Recently Cancelled 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer availableAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="availableAppointmentText"
        >
          תור ריק
        </div>
        <div
          className="recentChangeChipContainer"
        >
          <div
            className="recentChangeChip redChip"
          >
            בוטל לאחרונה
          </div>
        </div>
      </div>
      <svg>
        add-person.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Preview Recently Completed 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer bookedAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="donorName"
        >
          משה כהן
        </div>
        <div
          className="recentChangeChipContainer"
        >
          <div
            className="recentChangeChip greenChip"
          >
            הושלם
          </div>
        </div>
      </div>
      <svg>
        chevron-left.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Appointment Preview Recently No Show 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="appointmentPreviewContainer bookedAppointment"
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="deleteButton"
      onClick={[Function]}
    >
      <svg>
        trash.svg
      </svg>
      <div
        className="deleteButtonText"
      >
        מחק תור
      </div>
    </div>
    <div
      className="appointmentPreviewContent"
      onClick={[Function]}
    >
      <div
        className="nameAndChip"
      >
        <div
          className="donorName"
        >
          משה כהן
        </div>
        <div
          className="recentChangeChipContainer"
        >
          <div
            className="recentChangeChip redChip"
          >
            לא הגיע
          </div>
        </div>
      </div>
      <svg>
        chevron-left.svg
      </svg>
    </div>
  </div>
</div>
`;
